# vibe

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
apps/electron-app/: README.md  dev-app-update.yml  electron-builder.js  electron.vite.config.ts  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
apps/electron-app/resources/: DMG_Background.tiff  icon.icns
apps/electron-app/scripts/: load-env.sh  notarize.js  notarizedmg.js  setup-venv.sh
apps/electron-app/src/main/: index.ts
apps/electron-app/src/main/browser/: application-window.ts  browser.ts  tab-manager.ts  view-manager.ts  window-manager.ts
apps/electron-app/src/main/ipc/: index.ts
apps/electron-app/src/main/menu/: index.ts
apps/electron-app/src/main/processes/: agent-process.ts
apps/electron-app/src/main/services/: agent-service.ts  agent-worker.ts  cdp-service.ts  (+3 more)
apps/electron-app/src/preload/: index.ts
apps/electron-app/src/renderer/: index.html
apps/mcp-server/vibe-memory-rag/: README.md  pyproject.toml  requirements.txt
apps/mcp-server/vibe-memory-rag/src/: chroma_setup.py  main.py  mem0_utils.py  temporal_intelligence.py  utils.py
docs/: DISCLAIMER.md
scripts/: dev.js
(+98 files in other folders)
