[project]
name = "vibe-memory-rag"
version = "0.1.0"
description = "Vibe Memory + RAG MCP Server combining Mem0 and advanced RAG capabilities"
authors = [
    { name = "CoBrowser", email = "michel@cobrowser.xyz" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "mem0ai>=0.1.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 